# rfw

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  README.md  build.sh  cargo-cross.toml  docker-compose.yml  forwarders.yml
.github/workflows/: ci.yml  docker.yml  release.yml
.serena/: project.yml
docs/: release-workflow.md
docs/plans/: perf_bandwidth_PLAN.md
src/: config.rs  forwarder.rs  logging.rs  main.rs  manager.rs  metrics.rs  stats.rs
tests/: e2e_forward.rs
