[package]
name = "rfw"
version = "1.0.3"
edition = "2021"
description = "Rust Forwarder — TCP port forwarder with hot-reload, auto-reconnect, and dynamic DNS"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"
notify = "9.0.0-rc.4"
hickory-resolver = "0.26.1"
socket2 = "0.6"
libc = "0.2"
chrono = "0.4.45"
anyhow = "1.0.102"
thiserror = "2.0.18"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
# NOTE: panic is intentionally left as "unwind" (default). A panic in one
# connection task must stay isolated, not abort the whole multi-forwarder process.
